--- a/app/src/main/res/layout/activity_intern_edit_profile.xml
+++ b/app/src/main/res/layout/activity_intern_edit_profile.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="Name"
+                android:text="@string/name"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/black"/>
 
@@ -55,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="Contact Number"
+                android:text="@string/contact_number"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/black"/>
 
@@ -72,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="About"
+                android:text="@string/about"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/black"/>
 
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="EDUCATION"
+                android:text="@string/educationn"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/black"/>
 
@@ -102,7 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="School"
+                android:text="@string/school"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"/>
 
@@ -119,7 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="Course"
+                android:text="@string/course"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"/>
 
@@ -136,7 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="Expected Graduation Year"
+                android:text="@string/expected_graduation_year"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"/>
 
