--- a/app/src/main/res/layout/activity_intern_feedback.xml
+++ b/app/src/main/res/layout/activity_intern_feedback.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="24dp"
-        android:text="Share Your Experience!"
+        android:text="@string/share_your_experience"
         android:gravity="center"
         android:textColor="@color/blue"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:text="Internship Title"
+        android:text="@string/internship_title"
         android:textColor="@color/black"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/tv_share"
@@ -37,7 +37,7 @@
         android:id="@+id/btn_share_facebook"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Facebook"
+        android:text="@string/facebook"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_internshipTitle"
@@ -49,7 +49,7 @@
         android:id="@+id/btn_share_instagram"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Instagram"
+        android:text="@string/instagram"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_share_facebook"
@@ -61,7 +61,7 @@
         android:id="@+id/btn_share_twitter"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Twitter"
+        android:text="@string/twitter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_share_instagram"
