--- a/app/src/main/res/layout/activity_intern_internship_details.xml
+++ b/app/src/main/res/layout/activity_intern_internship_details.xml
@@ -51,7 +51,7 @@
                         android:id="@+id/btn_tv_internshipDetails_apply"
                         android:layout_width="100dp"
                         android:layout_height="40dp"
-                        android:text="Apply"
+                        android:text="@string/apply"
                         android:textColor="@color/white"
                         android:backgroundTint="@color/blue"/>
 
@@ -59,7 +59,7 @@
                         android:id="@+id/btn_tv_internshipDetails_feedback"
                         android:layout_width="100dp"
                         android:layout_height="40dp"
-                        android:text="Share"
+                        android:text="@string/share"
                         android:textColor="@color/white"
                         android:backgroundTint="@color/blue"
                         android:visibility="gone"/>
