--- a/app/src/main/res/layout/activity_intern_profile.xml
+++ b/app/src/main/res/layout/activity_intern_profile.xml
@@ -52,7 +52,7 @@
                         android:id="@+id/btn_internProfile_edit"
                         android:layout_width="100dp"
                         android:layout_height="40dp"
-                        android:text="Edit"
+                        android:text="@string/edit"
                         android:textColor="@color/white"
                         android:backgroundTint="@color/blue"/>
                 </LinearLayout>
@@ -117,7 +117,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="16dp"
-                        android:text="Experience"
+                        android:text="@string/experience"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:layout_weight="1"/>
@@ -126,7 +126,7 @@
                         android:id="@+id/btn_internProfile_update"
                         android:layout_width="100dp"
                         android:layout_height="40dp"
-                        android:text="Update"
+                        android:text="@string/update"
                         android:textColor="@color/white"
                         android:backgroundTint="@color/blue"/>
 
@@ -152,7 +152,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
-                    android:text="Education"
+                    android:text="@string/education"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
 
