--- a/app/src/main/res/layout/activity_intern_view_company.xml
+++ b/app/src/main/res/layout/activity_intern_view_company.xml
@@ -96,7 +96,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
-                    android:text="Available Internships"
+                    android:text="@string/available_internships"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
 
