--- a/app/src/main/res/layout/activity_intern_view_internships.xml
+++ b/app/src/main/res/layout/activity_intern_view_internships.xml
@@ -18,7 +18,7 @@
         android:id="@+id/tv_internships"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Internship Openings"
+        android:text="@string/internship_openings"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
