--- a/app/src/main/res/layout/activity_company_job_listing.xml
+++ b/app/src/main/res/layout/activity_company_job_listing.xml
@@ -17,7 +17,7 @@
             android:id="@+id/tv_jobListTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="My Internships"
+            android:text="@string/my_internships"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -31,7 +31,7 @@
             android:id="@+id/btn_addInternship"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:text="Add Internship"
+            android:text="@string/add_internship"
             android:textColor="@color/white"
             android:backgroundTint="@color/blue"
             app:layout_constraintTop_toBottomOf="@+id/tv_jobListTitle"
