--- a/app/src/main/res/layout/activity_company_menu.xml
+++ b/app/src/main/res/layout/activity_company_menu.xml
@@ -61,7 +61,7 @@
         android:id="@+id/btn_companyMenuLogout"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Logout"
+        android:text="@string/logout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuProfile"
