--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24dp"
-        android:text="Login"
+        android:text="@string/login"
         android:gravity="center"
         android:textColor="@color/blue"
         android:textStyle="bold"/>
@@ -22,14 +22,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="16dp"
-        android:text="Email"
+        android:text="@string/email"
         android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_emailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="@string/email"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textSize="14dp"
@@ -40,14 +40,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="16dp"
-        android:text="Password"
+        android:text="@string/password"
         android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="@string/password"
         android:ems="10"
         android:inputType="textPassword"
         android:textSize="14dp"
