frontend + small changes
- added menu to intern feedback screen

--- a/app/src/main/res/layout/activity_intern_profile.xml
+++ b/app/src/main/res/layout/activity_intern_profile.xml
@@ -14,7 +14,7 @@
     tools:context=".intern.InternProfile"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@color/grey">
+        android:background="@color/blue">
 
     <ScrollView
         android:layout_width="match_parent"
