--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -5,8 +5,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@android:color/black" />
+    <stroke android:width="2dp"
+        android:color="@color/blue" />
+    <corners android:radius="7dp"/>
 </shape>
