--- a/app/src/main/res/layout/activity_company_menu.xml
+++ b/app/src/main/res/layout/activity_company_menu.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/blue">
 
     <TextView
         android:id="@+id/tv_companyMenuTitle"
@@ -18,7 +19,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="50dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:textStyle="bold"/>
 
     <TextView
@@ -30,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_companyMenuTitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/white"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_companyMenuJobs"
@@ -41,8 +42,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="50dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -54,8 +56,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuJobs"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"/>
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_companyMenuLogout"
@@ -66,7 +69,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_companyMenuProfile"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"/>
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
