--- a/app/src/main/res/layout/activity_company_profile.xml
+++ b/app/src/main/res/layout/activity_company_profile.xml
@@ -14,7 +14,7 @@
         tools:context=".company.CompanyProfile"
         android:orientation="vertical"
         android:padding="10dp"
-        android:background="@color/grey">
+        android:background="@color/blue">
 
     <ScrollView
         android:layout_width="match_parent"
