--- a/app/src/main/res/layout/activity_company_specific_job_posting.xml
+++ b/app/src/main/res/layout/activity_company_specific_job_posting.xml
@@ -13,7 +13,7 @@
     tools:context=".intern.internInternshipDetails"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@color/grey">
+    android:background="@color/blue">
 
     <ScrollView
         android:layout_width="match_parent"
