--- a/app/src/main/res/layout/activity_company_view_applicant_information.xml
+++ b/app/src/main/res/layout/activity_company_view_applicant_information.xml
@@ -13,7 +13,7 @@
     tools:context=".company.CompanyViewApplicantInformation"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@color/grey">
+        android:background="@color/blue">
 
     <ScrollView
         android:layout_width="match_parent"
