--- a/app/src/main/res/layout/activity_intern_internship_details.xml
+++ b/app/src/main/res/layout/activity_intern_internship_details.xml
@@ -13,7 +13,7 @@
     tools:context=".intern.InternInternshipDetails"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@color/grey">
+        android:background="@color/blue">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -65,6 +65,14 @@
                         android:visibility="gone"/>
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_internshipDetails_company"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="Company"
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:id="@+id/tv_internshipDetails_function"
