--- a/app/src/main/res/layout/activity_intern_menu.xml
+++ b/app/src/main/res/layout/activity_intern_menu.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".intern.InternMenu"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/blue">
 
     <TextView
         android:id="@+id/tv_internMenuTitle"
@@ -18,7 +19,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="50dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:textStyle="bold"/>
 
     <TextView
@@ -30,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_internMenuTitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_internMenuJobs"
@@ -41,8 +42,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="50dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -54,8 +56,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -67,8 +70,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuMyJobs"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"/>
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_internMenuProfile"
@@ -79,8 +83,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuCompanies"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"/>
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_internMenuLogout"
@@ -91,7 +96,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_internMenuProfile"
         android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"/>
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
