--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/blue">
 
     <TextView
         android:id="@+id/textView"
@@ -18,7 +19,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="150dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:textStyle="bold"/>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -29,9 +30,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="@color/blue"
-        android:textColor="@color/white"
+        android:layout_marginTop="70dp"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -43,8 +45,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_login"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/blue"
-        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
