--- a/app/src/main/res/layout/item_applicant.xml
+++ b/app/src/main/res/layout/item_applicant.xml
@@ -3,21 +3,19 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="@drawable/border"
     card_view:cardCornerRadius="10dp"
-    android:backgroundTint="@color/light_blue"
+    android:foreground="@drawable/border"
     android:layout_marginBottom="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"/>
@@ -27,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_name"
-            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
             android:textSize="16sp"/>
     </RelativeLayout>
 
