--- a/app/src/main/res/layout/item_company_internship.xml
+++ b/app/src/main/res/layout/item_company_internship.xml
@@ -3,22 +3,20 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@drawable/border"
+    android:foreground="@drawable/border"
     card_view:cardCornerRadius="10dp"
-    android:backgroundTint="@color/light_blue"
     android:layout_marginBottom="10dp"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -28,13 +26,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_title"
-            android:layout_marginStart="10dp" />
+            android:textColor="@color/black"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/text_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_function"
-            android:layout_marginStart="10dp" />
+            android:textColor="@color/black"
+            android:textSize="16sp"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
