--- a/app/src/main/res/layout/item_experience.xml
+++ b/app/src/main/res/layout/item_experience.xml
@@ -5,21 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     card_view:cardCornerRadius="10dp"
-    android:background="@drawable/border"
-    android:backgroundTint="@color/light_blue"
+    android:foreground="@drawable/border"
     android:layout_marginBottom="10dp"
     android:orientation="horizontal">
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/tv_experienceTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:text="Experience Title"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -30,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_experienceTitle"
-            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
             android:text="Company Name"/>
 
         <TextView
@@ -38,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_experience_companyName"
-            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
             android:text="January 2021-February 2022"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
