--- a/app/src/main/res/layout/item_internship.xml
+++ b/app/src/main/res/layout/item_internship.xml
@@ -4,48 +4,50 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@drawable/border"
+    android:foreground="@drawable/border"
     card_view:cardCornerRadius="10dp"
-    android:backgroundTint="@color/light_blue"
     android:layout_marginBottom="10dp"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:text="Name"/>
 
         <TextView
             android:id="@+id/text_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_title"
-            android:layout_marginStart="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:text="Company"/>
 
         <TextView
-            android:id="@+id/text_function"
+            android:id="@+id/text_function_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_company"
-            android:layout_marginStart="10dp" />
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:text="Function, Type"/>
 
-        <TextView
-            android:id="@+id/text_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_function"
-            android:layout_marginStart="10dp" />
+<!--        <TextView-->
+<!--            android:id="@+id/text_type"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/text_function"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:text="Type"/>-->
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
