--- a/app/src/main/res/menu/nav_company_menu.xml
+++ b/app/src/main/res/menu/nav_company_menu.xml
@@ -8,12 +8,12 @@
         android:title="Home"/>
 
     <item
-        android:id="@+id/nav_companyProfile"
-        android:title="Profile"/>
+        android:id="@+id/nav_companyOpenings"
+        android:title="Jobs"/>
 
     <item
-        android:id="@+id/nav_companyOpenings"
-        android:title="Internship Openings"/>
+        android:id="@+id/nav_companyProfile"
+        android:title="Profile"/>
 
     <item
         android:id="@+id/nav_companyLogout"
